# AI-Data-Governance-Lakehouse

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROJECT_LOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
flows/: main_flow.py
notebooks/: 01_bronze_ingestion.ipynb  02_silver_transformation.ipynb  03_anomaly_detection.ipynb  04_gold_and_governance.ipynb
src/agents/: governance_agent.py
src/data/: download_raw.py  generate_synthetic.py
src/models/: autoencoder.py  inference.py  train.py
src/pipelines/: bronze.py  gold.py  silver.py
src/quality/: reporter.py  validators.py
src/utils/: logger.py  paths.py  spark_session.py
tests/: conftest.py  test_autoencoder.py  test_quality_validators.py  test_synthetic_data.py
